Move help into sidebar

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -2550,6 +2550,10 @@ ul.radio-inputs {
   background-color: @gray-dark;
 }
 
+.feedback-modal-backdrop {
+  opacity: 0.1;
+}
+
 .modal-container {
   position: relative;
 }
@@ -2671,6 +2675,13 @@ ul.radio-inputs {
 
 // Command Palette
 .command-palette.modal {
+  .modal-content {
+    padding: 0;
+  }
+}
+
+// Docs Search
+.docs-search-modal.modal {
   .modal-content {
     padding: 0;
   }
